# zephyr

boards/arm/stm32f746g_disco/: Kconfig.defconfig  stm32f746g_disco.dts
drivers/display/: display_stm32_ltdc.c
samples/subsys/display/lvgl/: CMakeLists.txt  prj.conf
samples/subsys/display/lvgl/boards/: stm32f746g_disco.conf
samples/subsys/display/lvgl/src/: main.c
samples/subsys/display/lvgl/src/gui/: gui_app.c  gui_app.h
samples/subsys/display/lvgl/src/gui/components/: gui_spinbox.c  gui_spinbox.h  gui_widgets.c  gui_widgets.h
samples/subsys/display/lvgl/src/gui/screen_tabs/: gui_mass_storage_tab.c  gui_mass_storage_tab.h  gui_random_tab.c  gui_random_tab.h
